add content when js is not available

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <% } %>
     </head>
     <body>
+        Loading...
         <div id="app"></div>
         <!-- built files will be auto injected -->
     </body>
