bug fix: 缓存时间按一小时算

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         <% } %>
     </head>
     <body>
-        Loading...
-        <div id="app"></div>
+        <div id="app">
+            Loading...
+        </div>
         <!-- built files will be auto injected -->
     </body>
 </html>
